modesetting driver + amdgpu.dc=1 always enforces vsync
Originally reported here: https://bugs.freedesktop.org/show_bug.cgi?id=109392
When amdgpu.dc=1 and modesetting driver are used at the same time, fps in 3D applications can't exceed monitor refreshrate and there is always no tearing, despite of vsync enabled or not in the applications. Happens with both radeonsi and radv. For OGL apps, forcing vsync off via vblank_mode=0 also doesn't show any effect in this case.
The issue doesn't occur with amdgpu.dc=0 + modesetting or with xf86-video-amdgpu.
Software used: linux drm-next-5.1-wip 5acc93145bf97a0d59ee65255cae8e1bd0623b07 xorg-server 1.20.3